2009-10-25 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Improve quality of checks to see whether variables
	have been set.

2009-10-25 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Improve warning message when JRE_HOME and
	JAVA_HOME aren't set.

2009-10-25 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: More GRE_PATH cleanup.

2009-10-24 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Clean up legacy cruft in handling of GRE_PATH.

2009-10-22 Braden McDaniel  <braden@endoframe.com>

	Set development version to 0.18.99.

	* README
	* configure.ac
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc

2009-10-22 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Infer JRE_HOME from JAVA_HOME if only the latter
	is set.

2009-10-22 Braden McDaniel  <braden@endoframe.com>

	Use boost::filesystem::path when setting the search path for
	libjvm.

	* src/script/java.cpp
	(prepend_jre_home_libdirs_to_searchpath(const
	boost::filesystem::path &)): Changed to take a
	boost::filesystem::path.
	(load_libjvm::load_libjvm()): Pass a boost::filesystem::path to
	prepend_jre_home_libdirs_to_searchpath.

2009-10-22 Braden McDaniel  <braden@endoframe.com>

	Prefer JRE_HOME to locate libjvm rather than JAVA_HOME.

	* configure.ac: Use JRE_HOME instead of JAVA_HOME.
	* src/Makefile.am (script_java_la_CPPFLAGS): Define JRE_HOME
	instead of JAVA_HOME.
	* src/script/java.cpp
	(prepend_jre_home_libdirs_to_searchpath(const std::string &)):
	Changed function name.
	(load_libjvm::load_libjvm()): First check JRE_HOME; then use
	JAVA_HOME if JRE_HOME isn't set.

2009-10-19 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/collision.cpp
	(collision_node::do_modified() const): Call do_modified to avoid
	recursion.

2009-10-19 Braden McDaniel  <braden@endoframe.com>
