@@ -1,3 +1,10 @@
+2009-10-27 Braden McDaniel  <braden@endoframe.com>
+
+	* src/openvrml-player/curlbrowserhost.cpp
+	(openvrml_player_curl_browser_host_get_url(
+	OpenvrmlPlayerCurlBrowserHost *, const char *, GError **)): Set
+	GError on failure.
+
 2009-10-25 Braden McDaniel  <braden@endoframe.com>
 
 	* configure.ac: Improve quality of checks to see whether variables
